Bug 375769 - Mouse wheel over activity pager does not switch activity
Summary: Mouse wheel over activity pager does not switch activity
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Pager widget (other bugs)
Version First Reported In: 5.8.4
Platform: Ubuntu Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-01-31 00:05 UTC by Janet
Modified: 2017-04-11 23:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Janet 2017-01-31 00:05:42 UTC
When I use the mouse wheel over the desktop pager I can switch desktops, when I click on the current desktop in the pager all windows are minimized. That's fine and the desired behaviour. The activity pager alas treats the mouse wheel as if it is a click: When I use the wheel over the activity pager all windows are minimized. "Natural" would be to switch activities with the wheel, the activity pager should operate the same way as the desktop pager (consistency).
Comment 1 Eike Hein 2017-01-31 05:03:05 UTC
I cannot reproduce "When I use the wheel over the activity pager all windows are minimized", but it's true that switching by wheel seems to be hosed.
Comment 2 Eike Hein 2017-01-31 05:08:08 UTC
Re "When I use the wheel over the activity pager all windows are minimized", I didn't have "Shows desktop" enabled, and I see the bug in the code now.
Comment 3 Eike Hein 2017-01-31 06:22:07 UTC
Patch under review: https://phabricator.kde.org/D4360

Also improves behavior when responding to trackpad scroll.
Comment 4 Eike Hein 2017-02-01 10:47:55 UTC
Git commit fff65ad696f4dc34391a0e9eb4b9ef0ed09a9c42 by Eike Hein.
Committed on 01/02/2017 at 10:47.
Pushed by hein into branch 'Plasma/5.8'.

Revamp (Activity) Pager wheel handling

Summary:
Fixes the mouse wheel not working to switch activities by
refactoring the code so currentPage() always behaves the
same and accounting for virt desktops starting at 1 only
where it actually counts, then fixing an off-by-one along
the way.

Also introduces the wheel event handling logic used in
Task Manager and many other UIs to avoid reacting overly
sensitively to gesture scroll events from trackpads.

Reviewers: #plasma

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D4360

M  +28   -6    applets/pager/package/contents/ui/main.qml
M  +8    -9    applets/pager/plugin/pagermodel.cpp
M  +1    -1    applets/pager/plugin/pagermodel.h

https://commits.kde.org/plasma-desktop/fff65ad696f4dc34391a0e9eb4b9ef0ed09a9c42
Comment 5 Janet 2017-04-11 13:41:50 UTC
Thanks for the quick reaction. Can you please specify in which version this is fixed as I still have the issue with 5.8.5 from Kubuntu backports?
Comment 6 Eike Hein 2017-04-11 23:02:30 UTC
It's fixed in 5.8.6. and later or 5.9.1 and later, respectively.