Revamp (Activity) Pager wheel handling

Summary:
Fixes the mouse wheel not working to switch activities by
refactoring the code so currentPage() always behaves the
same and accounting for virt desktops starting at 1 only
where it actually counts, then fixing an off-by-one along
the way.
BUG:375769

Also introduces the wheel event handling logic used in
Task Manager and many other UIs to avoid reacting overly
sensitively to gesture scroll events from trackpads.

Reviewers: #plasma

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D4360